<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:paddingStart="@dimen/size_20dp"
            android:paddingEnd="@dimen/size_20dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtEmail"
                style="@style/SmallFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginBottom="@dimen/size_14dp"
                android:hint="@string/hint_email_id"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                app:met_errorColor="@color/colorErrorColor"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/colorFloatingLabelText"
                app:met_singleLineEllipsis="false"
                app:met_textColor="@color/colorPrimaryText"
                app:met_textColorHint="@color/colorHint"
                app:met_underlineColor="@color/colorUnderline" />

        </RelativeLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/save_button_height_50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/size_20dp"
            android:visibility="visible"
            app:mrl_rippleColor="@color/colorRippleColor"
            app:mrl_rippleDelayClick="true"
            app:mrl_rippleDuration="@string/ripple_duration"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <TextView
                android:id="@+id/txtSend"
                style="@style/SmallFont"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:fontFamily="@string/font_family_medium"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/colorWhite" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>
</layout>